# FrontNeglectedDesktopEnvironment

./: .breakpoints  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
frontneglecteddesktopenvironment/: asgi.py  settings.py  urls.py  wsgi.py
postgres_manager/: apps.py  models.py  views.py
postgres_manager/migrations/: 0001_initial.py  0002_rename_person_persons.py  0003_remove_databases_owner_delete_persons.py  0004_auto_20220324_1941.py
postgres_manager/templates/: headers.html  render_accounts.html
