[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
dj-database-url = "^0.5.0"
Pillow = "^9.0.1"
psycopg-binary = "^3.0.10"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
[tool.poetry.dev-dependencies]
